--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,7 @@
 header h1 a { 
-    color:tomato;
+    color:tomato;font-family: 'Ubuntu', sans-serif;
+}
+
+body {
+    font-family: 'Ubuntu', sans-serif;
 }
