--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <h1><a href="{% url 'home' %}">Django Blog MAY2023</a></h1>
+        <a href="{% url 'post_new' %}">New post</a>
     </header>
 
     {% block content %}
