--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
         <a href="{% url 'post_new' %}">New post</a>
     </header>
 
+    <a href="{% url 'login' %}">Log In</a> |
+    <a href="{% url 'signup' %}">Sing up</a>
+
     {% block content %}
     
     {% endblock content %}    
