--- a/templates/post_detail_view.html
+++ b/templates/post_detail_view.html
@@ -8,4 +8,5 @@
      
      
      <a href="{% url 'post_update' post.pk %}" >Update post</a>
+     <a href="{% url 'post_delete' post.pk %}" >Delete post</a>
 {% endblock content %}
