--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,14 @@
         <a href="{% url 'post_new' %}">New post</a>
     </header>
 
-    <a href="{% url 'login' %}">Log In</a> |
-    <a href="{% url 'signup' %}">Sing up</a>
+    {% if user.is_authenticate %}
+        <p>Epale {{ user.username }}</p>
+        <a href="{% url 'logout' %}">Log out</a>
+    {% else %}
+        <p>No estas logeado</p>
+        <a href="{% url 'login' %}">Log In</a> |
+        <a href="{% url 'signup' %}">Sing up</a>
+    {% endif %}
 
     {% block content %}
     
